// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowService getFlowDiagram should remove placeholders 1`] = `
[
  {
    "children": [],
    "data": {},
    "group": false,
    "height": 75,
    "id": "test|route.from",
    "parentNode": "test|route",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "children": [],
    "data": {},
    "group": false,
    "height": 75,
    "id": "test|route.from.steps.0.set-header",
    "parentNode": "test|route",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "children": [],
    "data": {},
    "group": false,
    "height": 75,
    "id": "test|route.from.steps.1.choice.when.0.steps.0.log",
    "parentNode": "test|route.from.steps.1.choice.when.0",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "children": [
      "test|route.from.steps.1.choice.when.0.steps.0.log",
    ],
    "data": {},
    "group": true,
    "id": "test|route.from.steps.1.choice.when.0",
    "label": "route.from.steps.1.choice.when.0",
    "parentNode": "test|route.from.steps.1.choice",
    "style": {
      "padding": 40,
    },
    "type": "group",
  },
  {
    "children": [],
    "data": {},
    "group": false,
    "height": 75,
    "id": "test|route.from.steps.1.choice.otherwise.steps.0.to",
    "parentNode": "test|route.from.steps.1.choice.otherwise",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "children": [],
    "data": {},
    "group": false,
    "height": 75,
    "id": "test|route.from.steps.1.choice.otherwise.steps.1.to",
    "parentNode": "test|route.from.steps.1.choice.otherwise",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "children": [],
    "data": {},
    "group": false,
    "height": 75,
    "id": "test|route.from.steps.1.choice.otherwise.steps.2.log",
    "parentNode": "test|route.from.steps.1.choice.otherwise",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "children": [
      "test|route.from.steps.1.choice.otherwise.steps.0.to",
      "test|route.from.steps.1.choice.otherwise.steps.1.to",
      "test|route.from.steps.1.choice.otherwise.steps.2.log",
    ],
    "data": {},
    "group": true,
    "id": "test|route.from.steps.1.choice.otherwise",
    "label": "route.from.steps.1.choice.otherwise",
    "parentNode": "test|route.from.steps.1.choice",
    "style": {
      "padding": 40,
    },
    "type": "group",
  },
  {
    "children": [
      "test|route.from.steps.1.choice.when.0",
      "test|route.from.steps.1.choice.otherwise",
    ],
    "data": {},
    "group": true,
    "id": "test|route.from.steps.1.choice",
    "label": "route.from.steps.1.choice",
    "parentNode": "test|route",
    "style": {
      "padding": 40,
    },
    "type": "group",
  },
  {
    "children": [],
    "data": {},
    "group": false,
    "height": 75,
    "id": "test|route.from.steps.2.to",
    "parentNode": "test|route",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "children": [
      "test|route.from",
      "test|route.from.steps.0.set-header",
      "test|route.from.steps.1.choice",
      "test|route.from.steps.2.to",
    ],
    "data": {},
    "group": true,
    "id": "test|route",
    "label": "route",
    "parentNode": undefined,
    "style": {
      "padding": 40,
    },
    "type": "group",
  },
]
`;

exports[`FlowService getFlowDiagram should remove placeholders 2`] = `
[
  {
    "edgeStyle": "solid",
    "id": "test|route.from >>> route.from.steps.0.set-header",
    "source": "test|route.from",
    "target": "test|route.from.steps.0.set-header",
    "type": "edge",
  },
  {
    "edgeStyle": "solid",
    "id": "test|route.from.steps.0.set-header >>> route.from.steps.1.choice",
    "source": "test|route.from.steps.0.set-header",
    "target": "test|route.from.steps.1.choice",
    "type": "edge",
  },
  {
    "edgeStyle": "solid",
    "id": "test|route.from.steps.1.choice.otherwise.steps.0.to >>> route.from.steps.1.choice.otherwise.steps.1.to",
    "source": "test|route.from.steps.1.choice.otherwise.steps.0.to",
    "target": "test|route.from.steps.1.choice.otherwise.steps.1.to",
    "type": "edge",
  },
  {
    "edgeStyle": "solid",
    "id": "test|route.from.steps.1.choice.otherwise.steps.1.to >>> route.from.steps.1.choice.otherwise.steps.2.log",
    "source": "test|route.from.steps.1.choice.otherwise.steps.1.to",
    "target": "test|route.from.steps.1.choice.otherwise.steps.2.log",
    "type": "edge",
  },
  {
    "edgeStyle": "solid",
    "id": "test|route.from.steps.1.choice >>> route.from.steps.2.to",
    "source": "test|route.from.steps.1.choice",
    "target": "test|route.from.steps.2.to",
    "type": "edge",
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a group with children 1`] = `
[
  {
    "children": [],
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": undefined,
        "data": {
          "description": "",
          "iconUrl": "",
          "isGroup": false,
          "isPlaceholder": false,
          "name": "route",
          "title": "",
        },
        "id": "child1",
        "lastUpdate": 0,
        "nextNode": undefined,
        "parentNode": VisualizationNode {
          "DISABLED_NODE_INTERACTION": {
            "canBeDisabled": false,
            "canHaveChildren": false,
            "canHaveNextStep": false,
            "canHavePreviousStep": false,
            "canHaveSpecialChildren": false,
            "canRemoveFlow": false,
            "canRemoveStep": false,
            "canReplaceStep": false,
          },
          "children": [
            [Circular],
            VisualizationNode {
              "DISABLED_NODE_INTERACTION": {
                "canBeDisabled": false,
                "canHaveChildren": false,
                "canHaveNextStep": false,
                "canHavePreviousStep": false,
                "canHaveSpecialChildren": false,
                "canRemoveFlow": false,
                "canRemoveStep": false,
                "canReplaceStep": false,
              },
              "children": undefined,
              "data": {
                "description": "",
                "iconUrl": "",
                "isGroup": false,
                "isPlaceholder": false,
                "name": "route",
                "title": "",
              },
              "id": "child2",
              "lastUpdate": 0,
              "nextNode": undefined,
              "parentNode": [Circular],
              "previousNode": undefined,
            },
          ],
          "data": {
            "description": "",
            "iconUrl": "",
            "isGroup": true,
            "isPlaceholder": false,
            "name": "route",
            "title": "",
          },
          "id": "group",
          "lastUpdate": 0,
          "nextNode": undefined,
          "parentNode": undefined,
          "previousNode": undefined,
        },
        "previousNode": undefined,
      },
    },
    "group": false,
    "height": 75,
    "id": "test|child1",
    "parentNode": "test|group",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "children": [],
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": undefined,
        "data": {
          "description": "",
          "iconUrl": "",
          "isGroup": false,
          "isPlaceholder": false,
          "name": "route",
          "title": "",
        },
        "id": "child2",
        "lastUpdate": 0,
        "nextNode": undefined,
        "parentNode": VisualizationNode {
          "DISABLED_NODE_INTERACTION": {
            "canBeDisabled": false,
            "canHaveChildren": false,
            "canHaveNextStep": false,
            "canHavePreviousStep": false,
            "canHaveSpecialChildren": false,
            "canRemoveFlow": false,
            "canRemoveStep": false,
            "canReplaceStep": false,
          },
          "children": [
            VisualizationNode {
              "DISABLED_NODE_INTERACTION": {
                "canBeDisabled": false,
                "canHaveChildren": false,
                "canHaveNextStep": false,
                "canHavePreviousStep": false,
                "canHaveSpecialChildren": false,
                "canRemoveFlow": false,
                "canRemoveStep": false,
                "canReplaceStep": false,
              },
              "children": undefined,
              "data": {
                "description": "",
                "iconUrl": "",
                "isGroup": false,
                "isPlaceholder": false,
                "name": "route",
                "title": "",
              },
              "id": "child1",
              "lastUpdate": 0,
              "nextNode": undefined,
              "parentNode": [Circular],
              "previousNode": undefined,
            },
            [Circular],
          ],
          "data": {
            "description": "",
            "iconUrl": "",
            "isGroup": true,
            "isPlaceholder": false,
            "name": "route",
            "title": "",
          },
          "id": "group",
          "lastUpdate": 0,
          "nextNode": undefined,
          "parentNode": undefined,
          "previousNode": undefined,
        },
        "previousNode": undefined,
      },
    },
    "group": false,
    "height": 75,
    "id": "test|child2",
    "parentNode": "test|group",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "children": [
      "test|child1",
      "test|child2",
    ],
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": [
          VisualizationNode {
            "DISABLED_NODE_INTERACTION": {
              "canBeDisabled": false,
              "canHaveChildren": false,
              "canHaveNextStep": false,
              "canHavePreviousStep": false,
              "canHaveSpecialChildren": false,
              "canRemoveFlow": false,
              "canRemoveStep": false,
              "canReplaceStep": false,
            },
            "children": undefined,
            "data": {
              "description": "",
              "iconUrl": "",
              "isGroup": false,
              "isPlaceholder": false,
              "name": "route",
              "title": "",
            },
            "id": "child1",
            "lastUpdate": 0,
            "nextNode": undefined,
            "parentNode": [Circular],
            "previousNode": undefined,
          },
          VisualizationNode {
            "DISABLED_NODE_INTERACTION": {
              "canBeDisabled": false,
              "canHaveChildren": false,
              "canHaveNextStep": false,
              "canHavePreviousStep": false,
              "canHaveSpecialChildren": false,
              "canRemoveFlow": false,
              "canRemoveStep": false,
              "canReplaceStep": false,
            },
            "children": undefined,
            "data": {
              "description": "",
              "iconUrl": "",
              "isGroup": false,
              "isPlaceholder": false,
              "name": "route",
              "title": "",
            },
            "id": "child2",
            "lastUpdate": 0,
            "nextNode": undefined,
            "parentNode": [Circular],
            "previousNode": undefined,
          },
        ],
        "data": {
          "description": "",
          "iconUrl": "",
          "isGroup": true,
          "isPlaceholder": false,
          "name": "route",
          "title": "",
        },
        "id": "group",
        "lastUpdate": 0,
        "nextNode": undefined,
        "parentNode": undefined,
        "previousNode": undefined,
      },
    },
    "group": true,
    "id": "test|group",
    "label": "group",
    "parentNode": undefined,
    "style": {
      "padding": 40,
    },
    "type": "group",
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a group with children 2`] = `[]`;

exports[`FlowService getFlowDiagram should return nodes and edges for a multiple nodes VisualizationNode 1`] = `
[
  {
    "children": [],
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": undefined,
        "data": {
          "description": "",
          "iconUrl": "",
          "isGroup": false,
          "isPlaceholder": false,
          "name": "route",
          "title": "",
        },
        "id": "node",
        "lastUpdate": 0,
        "nextNode": VisualizationNode {
          "DISABLED_NODE_INTERACTION": {
            "canBeDisabled": false,
            "canHaveChildren": false,
            "canHaveNextStep": false,
            "canHavePreviousStep": false,
            "canHaveSpecialChildren": false,
            "canRemoveFlow": false,
            "canRemoveStep": false,
            "canReplaceStep": false,
          },
          "children": undefined,
          "data": {
            "description": "",
            "iconUrl": "",
            "isGroup": false,
            "isPlaceholder": false,
            "name": "route",
            "title": "",
          },
          "id": "set-header",
          "lastUpdate": 0,
          "nextNode": VisualizationNode {
            "DISABLED_NODE_INTERACTION": {
              "canBeDisabled": false,
              "canHaveChildren": false,
              "canHaveNextStep": false,
              "canHavePreviousStep": false,
              "canHaveSpecialChildren": false,
              "canRemoveFlow": false,
              "canRemoveStep": false,
              "canReplaceStep": false,
            },
            "children": [
              VisualizationNode {
                "DISABLED_NODE_INTERACTION": {
                  "canBeDisabled": false,
                  "canHaveChildren": false,
                  "canHaveNextStep": false,
                  "canHavePreviousStep": false,
                  "canHaveSpecialChildren": false,
                  "canRemoveFlow": false,
                  "canRemoveStep": false,
                  "canReplaceStep": false,
                },
                "children": [
                  VisualizationNode {
                    "DISABLED_NODE_INTERACTION": {
                      "canBeDisabled": false,
                      "canHaveChildren": false,
                      "canHaveNextStep": false,
                      "canHavePreviousStep": false,
                      "canHaveSpecialChildren": false,
                      "canRemoveFlow": false,
                      "canRemoveStep": false,
                      "canReplaceStep": false,
                    },
                    "children": undefined,
                    "data": {
                      "description": "",
                      "iconUrl": "",
                      "isGroup": false,
                      "isPlaceholder": false,
                      "name": "route",
                      "title": "",
                    },
                    "id": "when-leaf",
                    "lastUpdate": 0,
                    "nextNode": undefined,
                    "parentNode": [Circular],
                    "previousNode": undefined,
                  },
                ],
                "data": {
                  "description": "",
                  "iconUrl": "",
                  "isGroup": false,
                  "isPlaceholder": false,
                  "name": "route",
                  "title": "",
                },
                "id": "when",
                "lastUpdate": 0,
                "nextNode": undefined,
                "parentNode": [Circular],
                "previousNode": undefined,
              },
              VisualizationNode {
                "DISABLED_NODE_INTERACTION": {
                  "canBeDisabled": false,
                  "canHaveChildren": false,
                  "canHaveNextStep": false,
                  "canHavePreviousStep": false,
                  "canHaveSpecialChildren": false,
                  "canRemoveFlow": false,
                  "canRemoveStep": false,
                  "canReplaceStep": false,
                },
                "children": [
                  VisualizationNode {
                    "DISABLED_NODE_INTERACTION": {
                      "canBeDisabled": false,
                      "canHaveChildren": false,
                      "canHaveNextStep": false,
                      "canHavePreviousStep": false,
                      "canHaveSpecialChildren": false,
                      "canRemoveFlow": false,
                      "canRemoveStep": false,
                      "canReplaceStep": false,
                    },
                    "children": [
                      VisualizationNode {
                        "DISABLED_NODE_INTERACTION": {
                          "canBeDisabled": false,
                          "canHaveChildren": false,
                          "canHaveNextStep": false,
                          "canHavePreviousStep": false,
                          "canHaveSpecialChildren": false,
                          "canRemoveFlow": false,
                          "canRemoveStep": false,
                          "canReplaceStep": false,
                        },
                        "children": undefined,
                        "data": {
                          "description": "",
                          "iconUrl": "",
                          "isGroup": false,
                          "isPlaceholder": false,
                          "name": "route",
                          "title": "",
                        },
                        "id": "log",
                        "lastUpdate": 0,
                        "nextNode": undefined,
                        "parentNode": [Circular],
                        "previousNode": undefined,
                      },
                    ],
                    "data": {
                      "description": "",
                      "iconUrl": "",
                      "isGroup": false,
                      "isPlaceholder": false,
                      "name": "route",
                      "title": "",
                    },
                    "id": "process",
                    "lastUpdate": 0,
                    "nextNode": undefined,
                    "parentNode": [Circular],
                    "previousNode": undefined,
                  },
                ],
                "data": {
                  "description": "",
                  "iconUrl": "",
                  "isGroup": false,
                  "isPlaceholder": false,
                  "name": "route",
                  "title": "",
                },
                "id": "otherwise",
                "lastUpdate": 0,
                "nextNode": undefined,
                "parentNode": [Circular],
                "previousNode": undefined,
              },
            ],
            "data": {
              "description": "",
              "iconUrl": "",
              "isGroup": false,
              "isPlaceholder": false,
              "name": "route",
              "title": "",
            },
            "id": "choice",
            "lastUpdate": 0,
            "nextNode": VisualizationNode {
              "DISABLED_NODE_INTERACTION": {
                "canBeDisabled": false,
                "canHaveChildren": false,
                "canHaveNextStep": false,
                "canHavePreviousStep": false,
                "canHaveSpecialChildren": false,
                "canRemoveFlow": false,
                "canRemoveStep": false,
                "canReplaceStep": false,
              },
              "children": undefined,
              "data": {
                "description": "",
                "iconUrl": "",
                "isGroup": false,
                "isPlaceholder": false,
                "name": "route",
                "title": "",
              },
              "id": "direct",
              "lastUpdate": 0,
              "nextNode": undefined,
              "parentNode": undefined,
              "previousNode": [Circular],
            },
            "parentNode": undefined,
            "previousNode": [Circular],
          },
          "parentNode": undefined,
          "previousNode": [Circular],
        },
        "parentNode": undefined,
        "previousNode": undefined,
      },
    },
    "group": false,
    "height": 75,
    "id": "test|node",
    "parentNode": undefined,
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a multiple nodes VisualizationNode 2`] = `
[
  {
    "edgeStyle": "solid",
    "id": "test|node >>> set-header",
    "source": "test|node",
    "target": "test|set-header",
    "type": "edge",
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a simple VisualizationNode 1`] = `
[
  {
    "children": [],
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": undefined,
        "data": {
          "description": "",
          "iconUrl": "",
          "isGroup": false,
          "isPlaceholder": false,
          "name": "route",
          "title": "",
        },
        "id": "node",
        "lastUpdate": 0,
        "nextNode": undefined,
        "parentNode": undefined,
        "previousNode": undefined,
      },
    },
    "group": false,
    "height": 75,
    "id": "test|node",
    "parentNode": undefined,
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a simple VisualizationNode 2`] = `[]`;

exports[`FlowService getFlowDiagram should return nodes and edges for a two-nodes VisualizationNode 1`] = `
[
  {
    "children": [],
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": [
          VisualizationNode {
            "DISABLED_NODE_INTERACTION": {
              "canBeDisabled": false,
              "canHaveChildren": false,
              "canHaveNextStep": false,
              "canHavePreviousStep": false,
              "canHaveSpecialChildren": false,
              "canRemoveFlow": false,
              "canRemoveStep": false,
              "canReplaceStep": false,
            },
            "children": undefined,
            "data": {
              "description": "",
              "iconUrl": "",
              "isGroup": false,
              "isPlaceholder": false,
              "name": "route",
              "title": "",
            },
            "id": "child",
            "lastUpdate": 0,
            "nextNode": undefined,
            "parentNode": [Circular],
            "previousNode": undefined,
          },
        ],
        "data": {
          "description": "",
          "iconUrl": "",
          "isGroup": false,
          "isPlaceholder": false,
          "name": "route",
          "title": "",
        },
        "id": "node",
        "lastUpdate": 0,
        "nextNode": undefined,
        "parentNode": undefined,
        "previousNode": undefined,
      },
    },
    "group": false,
    "height": 75,
    "id": "test|node",
    "parentNode": undefined,
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a two-nodes VisualizationNode 2`] = `[]`;
